--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Shane Mc Cormack",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "socket.io": "^4.5.1"
   },
