--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
     "@cucumber/cucumber": "^8.5.0",
