--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "git-describe": "^4.1.1",
     "socket.io": "^4.5.1",
     "unique-names-generator": "^4.7.1"
   },
